# prolog2

./: .gitignore  Cargo.toml  LICENSE  README.md  fsm.pl  setup.json  setup1.json  setup_1.json  test.pl
.cargo/: config.toml
.githooks/: pre-commit
builtins/: defaults.pl  lists.pl  maths.pl  meta_predicates.pl  sets.pl  strings.pl
examples/: example.pl  family.pl  fsm.pl  hanoi_fsm.pl  map.pl  maths_test.pl  move_up.pl  mtg_fragment.pl  odd_even.pl  simple_family.pl  simple_test.pl  top_prog.pl
examples/ancestor/: README.md  ancestor.pl  config.json  family.pl  simple_family.pl  tpc_config.json
examples/coloured_graph/: ambiguities.pl  false_negatives.pl  false_positives.pl  main.pl  no_noise.pl
examples/datasets/: mtg.pl
examples/fsm/: config copy.json  config.json  parity.json  parser_fsm.pl
examples/map/: README.md  bind_double.json  config.json  learn_config.json  learn_map_double.pl  map.pl  query_config.json
examples/molecules/: bk.pl  hydroxyl.json  mol_defs.pl  phenolic.json
examples/mtg/: config.json  examples.pl  mtg_fragment.pl
examples/odd_even/: README.md  config.json  odd_even.pl
examples/parity/: README.md  config.json  parity.pl
examples/quadratic_formula/: config.json  function_meta_rules.pl  learn_quad.pl  quad_form.pl
examples/robots/: README.md  config.json  examples.pl  robots.pl  tpc_config.json
examples/trains/: README.md  config.json  config_debug.json  config_simple.json  tpc_config.json  trains.pl  trains_debug.pl
scripts/: embed_readme.py
src/: app.rs  atoms.rs  binding.rs  choice.rs  clause.rs  clause_table.rs  config_module.rs  examples.rs  heap.rs  lib.rs  main.rs  parser.rs  pred_module.rs  program.rs  proof.rs  solver.rs  state.rs  symbol_db.rs  term.rs  terms.rs  top_prog copy.rs  top_prog.rs  unification.rs
src/heap/: branch_store.rs  heap.md  heap.rs  mod.rs  parse.rs  query_heap.rs  state_heaps.rs  store.rs  symbol_db.rs  tests.rs  unification.rs
src/interface/: config.rs  mod.rs  parser.rs  state.rs  term.rs
src/interface_depreciated/: config.rs  mod.rs  term.rs
src/new_heap/: heap.rs  mod.rs  symbol_db.rs
src/old_code/: atoms.rs  clause.rs  program.rs  (+2 more)
(+109 files in other folders)
