[package]
name = "prolog2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fsize = "1.0.0"
manual_rwlock = "0.4.0"
lazy_static = "1.5.0"
rayon = "1.10.0"
num_cpus = "1.0"
rand = "0.8.5"
rand_split = "0.2.1"
console = "0.15.8"
bumpalo = "3.17.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"

[profile.dev]
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
