[package]
name = "prolog2"
version = "0.1.0"
edition = "2021"
description = "A Meta-Interpretive Learning framework implementing second-order SLD resolution"
license-file = "LICENSE"
repository = "https://github.com/jameswesc/prolog2"
readme = "README.md"
keywords = ["prolog", "logic-programming", "machine-learning", "inductive-logic-programming"]
categories = ["science", "mathematics"]

[lib]
name = "prolog2"
path = "src/lib.rs"

[[bin]]
name = "prolog2"
path = "src/main.rs"

[dependencies]
fsize = "1.0.0"
lazy_static = "1.5.0"
console = "0.15.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
