[package]
name = "prolog-squared"
version = "1.0.0"
edition = "2021"
description = "A Meta-Interpretive Learning framework implementing second-order SLD resolution"
license-file = "LICENSE"
repository = "https://github.com/JamesTrewern/prolog2"
readme = "README.md"
keywords = ["prolog", "logic-programming", "machine-learning", "ilp",]
categories = ["science", "mathematics"]
exclude = ["src/top_prog.rs", ".DS_Store"]
authors = ["James Trewern"]

[lib]
name = "prolog2"
path = "src/lib.rs"

[[bin]]
name = "prolog2"
path = "src/main.rs"

[dependencies]
fsize = "1.0.0"
lazy_static = "1.5.0"
console = "0.15.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
rayon = "1.11.0"
num_cpus = "1.17.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
